Price Kuudra attribute rolls as part of the item
ExtraAttributes.attributes was never parsed, so attribute gear was priced off
sales of a different item. The roll is a compound of two attribute names to
their levels; it now reaches DecodedItem, the signature, and the strategy note.

Measured against 26,000 BIN listings over 26 auction pages: 75 carry a roll
(0.29%), always exactly two, levels 1-7, 27 distinct names, concentrated in
Crimson Isle and Kuudra gear and fishing rods. Rare, but on those items the
roll is the dominant price term - CRIMSON_BOOTS asked a 1.9M median bare
(n=15) against 16M rolled, and LAVA_SHELL_NECKLACE 9.75M bare against 29M for
lifeline 7 + speed 6. Those are asking prices, so they size the gap and are
not evidence of value; the model still trains on auctions_ended only.

The load-bearing line is in FairValueModel.isBare(). A roll is the one upgrade
that leaves no other trace - no stars, no books, no gems - so an attributed
item read as bare and was priced off the coarse name-and-rarity pool, which
mixes both populations above. That is a false snipe in real coins, in either
direction depending on which side the pool leans.

Levels go into the signature exactly, not banded: a level 1 roll sits near the
bare price and a high one is worth multiples of it, so banding would price
neither. The cost is that rolled gear will usually miss MIN_SAMPLES and show
no valuation at all. That is a miss rather than a losing buy, and it is the
same trade already made for stars and gems; pricing it properly is the hedonic
work, not this fix.

Rejected: excluding rolled sales from the coarse index. That pool is already
contaminated the same way by starred and gemmed sales, mitigated by the 0.6
coarse confidence penalty and snipeMinDiscount. Special-casing attributes
there would be an inconsistent rule, and cleaning it up for every upgrade
would cut the prune's recall - a separate decision.

Attribute shards are not affected: of 37 shard listings sampled, none 